exports[`test Correct rendering of EventTypes-Settings 1`] = `
<div
  className="event-types-settings">
  
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <p>
    To add a new Event-Type please refer to the corresponding product and click the plus button.
  </p>
</div>
`;

exports[`test Receive eventTypes 1`] = `
<div
  className="event-types-settings">
  
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          0
        </td>
        <td>
          Error Events
        </td>
        <td />
        <td
          className="center">
          <i
            className="fa fa-trash"
            onClick={[Function]} />
        </td>
      </tr>
    </tbody>
  </table>
  <p>
    To add a new Event-Type please refer to the corresponding product and click the plus button.
  </p>
</div>
`;

exports[`test Receiving 403 error 1`] = `
<div
  className="event-types-settings">
  <div
    className="alert alert-danger"
    role="alert">
    You are not allowed to performed this operation.
  </div>
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <p>
    To add a new Event-Type please refer to the corresponding product and click the plus button.
  </p>
</div>
`;

exports[`test Receiving 500 error 1`] = `
<div
  className="event-types-settings">
  <div
    className="alert alert-danger"
    role="alert">
    Operation failed! There exist dependencies, which have to be resolved first.<br/>Dependent eventTypes: There still exist dependencies concerning this eventType
  </div>
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <p>
    To add a new Event-Type please refer to the corresponding product and click the plus button.
  </p>
</div>
`;

exports[`test Receiving undefined error 1`] = `
<div
  className="event-types-settings">
  <div
    className="alert alert-danger"
    role="alert">
    A critical connection error occurred!
  </div>
  <table
    className="table table-striped event-types-table">
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Query
        </th>
        <th
          className="center">
          Delete?
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <p>
    To add a new Event-Type please refer to the corresponding product and click the plus button.
  </p>
</div>
`;
